2009-05-11 disconnect when we cannot read from the socket
2009-05-11 benchmark utility now supports random keys
2009-05-10 minor doc changes
2009-05-09 added tests for vararg DEL
2009-05-09 DEL is now a vararg, IMPORTANT: memory leak fixed in loading DB code
2009-05-09 doc changes
2009-05-09 CPP client added thanks to Brian Hammond
2009-05-06 Infinite number of arguments for MGET and all the other commands
2009-05-04 Warns if /proc/sys/vm/overcommit_memory is set to 0 on Linux. Also make sure to don't resize the hash tables while the child process is saving in order to avoid copy-on-write of memory pages
2009-04-30 zmalloc fix, return NULL or real malloc failure
2009-04-30 more fixes for dict.c and the 150 million keys limit
2009-04-30 dict.c modified to be able to handle more than 150,000,000 keys
2009-04-29 fuzz stresser implemented in redis-test
2009-04-29 fixed for HT resize check 32bits overflow
2009-04-29 Check for fork() failure in background saving
2009-04-29 fix for the LZF off-by-one bug added
2009-04-28 print bytes used at exit on SHUTDOWN
2009-04-28 SMOVE test added
2009-04-28 SMOVE command implemented
2009-04-28 less CPU usage in command parsing, case insensitive config directives
2009-04-28 GETSET command doc added
2009-04-28 GETSET tests
2009-04-28 GETSET implemented
2009-04-27 ability to specify a different file name for the DB
2009-04-27 log file parsing code improved a bit
2009-04-27 bgsave_in_progress field in INFO output
2009-04-27 INCRBY/DECRBY now support 64bit increments, with tests
2009-04-23 RANDOMKEY regression test added
2009-04-23 dictGetRandomKey bug fixed, RANDOMKEY will not block the server anymore
2009-04-22 FLUSHALL/FLUSHDB no longer sync on disk. Just increment the dirty counter by the number of elements removed, that will probably trigger a background saving operation
2009-04-21 forgot to comment testing code in PHP lib. Now it is ok
2009-04-21 PHP client ported to PHP5 and fixed
2009-04-21 doc update